<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.meditatetoregenerate.metime.org.meditation.metime.About"
    android:background="@drawable/bg_about">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:paddingLeft="64dp"
            android:paddingRight="64dp">

            <TextView
                android:text="@string/term_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/term_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/term_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/term_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/term_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/term_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/term_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/term_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/term_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/text_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
