<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.meditation.metime.MainActivity"
    android:background="@drawable/opening">

    <Button
        android:text="@string/Meditation_btn"
        android:layout_width="match_parent"
        android:id="@+id/meditation_btn"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:elevation="0dp" />

    <Button
        android:text="@string/music_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/music_btn"
        android:layout_below="@+id/meditation_btn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <Button
        android:text="@string/pro_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pro_btn"
        android:layout_below="@+id/music_btn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <Button
        android:text="@string/quote_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quote_btn"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/pro_btn"
        android:layout_alignParentStart="true" />
</RelativeLayout>
