<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_music_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_music"
    tools:context="org.meditatetoregenerate.metime.org.meditation.metime.Info_Music">
    <!--tools:showIn="@layout/activity_journey_info"-->

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/infoTitleTopMargin"
            android:text="@string/music_slide_1_title"
            android:textColor="@color/txt_music"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/infoTextHeight"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/music_slide_1_desc"
            android:textAlignment="center"
            android:textColor="@color/txt_music"
            android:textSize="@dimen/slide_desc" />

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:layout_marginTop="20dp"
            android:src="@drawable/icn_meditator_red" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="@string/start"
        android:textColor="@color/element_active_music" />

</RelativeLayout>